# APTDetectionAgent

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
checkpoints/: README.md
data/: README.md
docs/: AGENT_RUNTIME_CONTRACT_FREEZE.md  AGENT_TOOL_CAPABILITY_SPEC.md  PIDSMaker_CAPABILITY_CATALOG.md  PIDSMaker_FRAMEWORK_NOTE.md  PROJECT_ARCHITECTURE_DESIGN_v1.1.md  SFT_DATASET_DESIGN.md  SFT_DEMONSTRATION_CONSTRUCTION_PLAN.md  controller_protocol.md  data_protocol.md  dataset_inventory.md  evaluation_protocol.md  experiment_protocol.md  memory_protocol.md  reproduction.md  schema_contracts.md  vllm_protocol.md
experiments/: README.md
pidsmaker_adapter/: README.md  UPSTREAM.md  __init__.py  artifacts.py  configuration.py  inference.py  main.py  pipeline.py  resources.py  training.py
scripts/: README.md  build_pidsmaker_compat.py  build_process_runtimes.py  build_real_hidden_request.py  build_sft_dataset.py  build_sft_dataset.sh  build_synthetic_demonstrations.py  build_synthetic_hidden_fixture.py  check_governance.py  finalize_frozen_window_smoke.py  finalize_pidsmaker_smoke.py  finalize_public_report.py  finalize_real_public_report.py  finalize_stage_run.py  freeze_pre_sft_bundle.py  pidsmaker_causal_runner.py  pidsmaker_stage_runner.py  provision_os_isolation.sh  remote_smoke_check.py  run_agent.sh  run_frozen_pids_tool.py  run_frozen_pidsmaker_smoke.sh  run_frozen_runtime_synthetic.py  run_hidden_evaluator.py  run_memory_retrieval_sensitivity.py  run_pidsmaker_smoke.sh  run_real_e2e.sh  run_structured_pids_adapter_smoke.py  run_synthetic_agent_scenario.py  standardize_pids_result.py  test_agent.sh  train_agent.sh  train_agent_sft.sh  train_sft.py  validate_pre_sft_bundle.py
tests/: __init__.py  test_agent_runtime_contract.py  test_architecture.py  test_causal_data.py  test_contracts.py  test_controller.py  test_entrypoints.py  (+32 more)
(+258 files in other folders)
