[build-system]
requires = ["setuptools>=68,<76"]
build-backend = "setuptools.build_meta"

[project]
name = "apt-detection-agent"
version = "0.1.0"
description = "Causal, tool-driven controller for provenance intrusion detection"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "Research use; see repository license status"}
authors = [{name = "APTDetectionAgent contributors"}]
dependencies = ["pydantic==2.12.5"]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-directory = "tests"
